# Calculation_Method

Array/: Array1.cpp  Array1.h  CMakeLists.txt  arrayy.cpp  arrayy.h  dooli.cpp  esti.cpp  fit.cpp  ite.cpp  l_f.cpp  leastsquares.cpp  leatsquares.h  main.cpp  matrix.cpp  matrix_.h  rev_1.cpp
Data_process/: CMakeLists.txt  samples.cpp  samples.h
Newton_Cotes/: CMakeLists.txt  Newton_Cotes.cpp  Newton_Cotes.h  Split.cpp  Split.h
Newton_Interpolation/: CMakeLists.txt  Newton.cpp  Newton.h
